# auto-flow_pipeline

./: .gitignore  README.md  environment.yml  environment_explicit.txt  environment_portable.yml  pyproject.toml  setup.py
reference_pipeline/: (4) create mag only dataset and its labeled dataset.ipynb  (5) format the mag testing data to feed into localization network.ipynb
src/auto_flow_pipeline/: __init__.py
src/auto_flow_pipeline/data_io/: catalogue_patients.py  dicom_to_nifti.py  logging.py  logging_setup.py  parse_dicom_files.py  prune.py  unzip.py
src/auto_flow_pipeline/data_io/patches/fix_nifti_affines/: archive_disoriented_mag-niftis.py  fix_affine_and_dump_nifti.py
src/auto_flow_pipeline/drivers/: catalogue_patients_driver.py  dicom_to_nifti_driver.py  extract_from_locnet_driver.py  generate_spline_driver.py  parse_all_dicoms_driver.py  parse_dicom_files_driver.py  prepare_for_locnet_driver.py  prepare_for_segnet_driver.py  prune_driver.py  reslice_driver.py  reverse_preprocessing_driver.py  reverse_segnet_preprocessing_driver.py  run_locnet_driver.py  run_segnet_driver.py  unzip_driver.py
src/auto_flow_pipeline/drivers_files/: parse_all_dicoms_driver.py
src/auto_flow_pipeline/flow_calculation/: compute_flow.py
src/auto_flow_pipeline/inference/locnet/: config.py  custom_loss.py  model_loader.py  run_locnet.py  utils.py
src/auto_flow_pipeline/inference/segnet/: config.py  custom_loss.py  model_loader.py  run_segnet.py
src/auto_flow_pipeline/postprocessing/locnet/: clean_prediction.py  reverse_preprocessing.py
src/auto_flow_pipeline/postprocessing/segnet/: reverse_preprocessing.py
src/auto_flow_pipeline/preprocessing/locnet/: prepare_for_locnet.py  prepare_for_locnet_tf.py
src/auto_flow_pipeline/preprocessing/segnet/: prepare_for_segnet.py
src/auto_flow_pipeline/slice_extraction/: extract_from_locnet.py  generate_spline.py  reslice.py
src/auto_flow_pipeline/visualization/dicom_to_nifti/: generate_gifs.py
src/auto_flow_pipeline/visualization/inference/locnet/run_locnet/: generate_gifs.py
src/auto_flow_pipeline/visualization/inference/segnet/run_segnet/: generate_gifs.py
src/auto_flow_pipeline/visualization/postprocessing/reverse_preprocessing/: generate_gifs.py
src/auto_flow_pipeline/visualization/postprocessing/segnet/reverse_preprocessing/: generate_gifs.py
src/auto_flow_pipeline/visualization/preprocessing/locnet/prepare_for_locnet/: generate_gifs.py
src/auto_flow_pipeline/visualization/preprocessing/segnet/prepare_for_segnet/: generate_gifs.py
src/auto_flow_pipeline/visualization/slice_extraction/: generate_gifs.py
src/data_io/: deprecated_dicom_to_nifti.py  dicom_to_nifti.py  parse_dicom_files.py  prune.py  unzip.py
src/drivers_files/: parse_all_dicoms_driver.py
src/notebooks/: segnet_sandbox.ipynb
