[build-system]
requires = ["setuptools>=63.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_flow_pipeline"
version = "0.1.0"
description = "This is the pipeline to use AutoFlow..."
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
unzip = "auto_flow_pipeline.drivers.unzip_driver:main"
prune = "auto_flow_pipeline.drivers.prune_driver:main"
parse_all_dicoms = "auto_flow_pipeline.drivers.parse_dicom_files_driver:main"
generate_base_niftis = "auto_flow_pipeline.drivers.dicom_to_nifti_driver:main"
catalogue_patients = "auto_flow_pipeline.drivers.catalogue_patients_driver:main"
prepare_for_locnet = "auto_flow_pipeline.drivers.prepare_for_locnet_driver:main"
run_locnet = "auto_flow_pipeline.drivers.run_locnet_driver:main"

