[build-system]
requires = ["setuptools>=63.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_flow_pipeline"
version = "2.12.0"
description = "This is the pipeline to use AutoFlow..."
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
unzip = "auto_flow_pipeline.drivers.unzip_driver:main"
prune = "auto_flow_pipeline.drivers.prune_driver:main"
parse_all_dicoms = "auto_flow_pipeline.drivers.parse_dicom_files_driver:main"
generate_base_niftis = "auto_flow_pipeline.drivers.dicom_to_nifti_driver:main"
catalogue_patients = "auto_flow_pipeline.drivers.catalogue_patients_driver:main"
prepare_for_locnet = "auto_flow_pipeline.drivers.prepare_for_locnet_driver:main"
run_locnet = "auto_flow_pipeline.drivers.run_locnet_driver:main"
reverse_locnet_preprocessing = "auto_flow_pipeline.drivers.reverse_preprocessing_driver:main"
extract_from_locnet = "auto_flow_pipeline.drivers.extract_from_locnet_driver:main"
generate_spline = "auto_flow_pipeline.drivers.generate_spline_driver:main"
reslice = "auto_flow_pipeline.drivers.reslice_driver:main"
prepare_for_segnet = "auto_flow_pipeline.drivers.prepare_for_segnet_driver:main"
run_segnet = "auto_flow_pipeline.drivers.run_segnet_driver:main"
reverse_segnet_preprocessing = "auto_flow_pipeline.drivers.reverse_segnet_preprocessing_driver:main"

